--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans p-6">
 
-  <h1 class="text-3xl font-bold mb-6 text-center">🛒 Daftar Produk Kesehatan</h1>
+  <h1 class="text-3xl font-bold mb-6 text-center">🛒 Produk Kesehatan</h1>
 
   <div id="produk-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     Loading...
